@@ -3,6 +3,9 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
 5.4.16 - unreleased
 
+	Tom Collins
+	- vpalias: Fix double-free in code ported from 5.5 branch.
+
 5.4.15 - released 24-Feb-06
 
 	Tom Collins
